--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
 		"@supabase/supabase-js": "^2.47.16",
 		"dotenv": "^16.4.7",
 		"validator": "^13.12.0"
+	},
+	"engines": {
+		"node": "22.x"
 	}
 }
