--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.7.2",
 		"@supabase/supabase-js": "^2.47.16",
+		"@vercel/analytics": "^1.4.1",
 		"dotenv": "^16.4.7",
 		"validator": "^13.12.0"
 	}
