--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@fortawesome/fontawesome-free": "^6.7.2",
 		"@supabase/supabase-js": "^2.47.16",
 		"@vercel/analytics": "^1.4.1",
+		"@vercel/speed-insights": "^1.1.0",
 		"dotenv": "^16.4.7",
 		"validator": "^13.12.0"
 	}
